# vehicle-tracking

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
cpp/: CMakeLists.txt  Dockerfile  build.sh  docker-compose.yml
cpp/include/: argparse.hpp  vehicle_roi_timer.hpp  yolov11.hpp
cpp/src/: main.cpp  vehicle_roi_timer.cpp  yolov11.cpp
python/: annotate_roi.py  cv_dnn_backend_target_finder.py  onnx_inference_vid.ipynb  quantize_onnx_static.ipynb  ultralytics_inference_vid.ipynb  ultralytics_model_export.ipynb  vehicle_roi_timer.ipynb
